plugins {
    id 'com.android.application'
    id 'org.jetbrains.kotlin.android'
    id 'com.google.devtools.ksp'
}

// For mockk with Java 16+
tasks.withType(Test) {
    ignoreFailures = true
    jvmArgs(
//            '--add-opens", "java.base/java.lang.reflect=ALL-UNNAMED',
            '--add-opens', 'java.base/java.util.concurrent=ALL-UNNAMED',
            '--add-opens', 'java.base/java.util=ALL-UNNAMED',
            '--add-opens', 'java.base/java.net=ALL-UNNAMED')
}


// Java/Kotlin toolchain support for Giraffe IDE version coming out in late 2023.
//java {
//    toolchain {
//        languageVersion.set(JavaLanguageVersion.of(17))
//    }
//}

//kotlin {
//    jvmToolchain {
////        (this as JavaToolchainSpec).languageVersion.set(JavaLanguageVersion.of(17))
//    }
//}

android {
    namespace 'edu.vandy'

    compileSdkVersion 34

    defaultConfig {
        applicationId "edu.vandy.palantirisimulator"
        minSdk 33
        targetSdk 34
        versionCode 1
        versionName "1.0"

        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
        }
    }

    buildFeatures {
        viewBinding true
    }

    compileOptions {
        sourceCompatibility JavaVersion.VERSION_17
        targetCompatibility JavaVersion.VERSION_17
    }

    packagingOptions {
        resources {
            excludes += '/META-INF/{AL2.0,LGPL2.1}'
        }
    }

    // Ensures that any Android calls in unit tests simply
    // return a default value instead of throwing an exception.
    testOptions {
        unitTests.returnDefaultValues = true
    }

    lint {
        abortOnError false
        checkReleaseBuilds false
    }

    sourceSets {
        main.java.srcDirs += 'src/main/kotlin'
        test.java.srcDirs += 'src/test/kotlin'

        main {
            file('src/main/res-screen')
                    .listFiles()
                    .each { res.srcDirs += it.path }
        }
    }
}

dependencies {
    implementation fileTree(include: ['*.jar'], dir: 'libs')

    implementation 'androidx.appcompat:appcompat:1.6.1'
    implementation "androidx.constraintlayout:constraintlayout:2.1.4"
    implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
    implementation "androidx.lifecycle:lifecycle-common:2.6.1"
    implementation "androidx.preference:preference-ktx:1.2.0"
    implementation "androidx.core:core-ktx:1.10.1"
    implementation 'androidx.fragment:fragment-ktx:1.6.1'

    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.7.2'

    implementation 'com.google.android.material:material:1.9.0'
    implementation "com.google.code.gson:gson:2.10.1"

    implementation 'io.reactivex.rxjava2:rxjava:2.2.21'
    implementation "io.reactivex.rxjava2:rxandroid:2.1.1"

    implementation "com.jakewharton.rxbinding2:rxbinding:2.2.0"

    implementation 'io.apptik.widget:multislider:1.3'

    implementation "com.squareup.picasso:picasso:2.71828"

    implementation 'com.github.bumptech.glide:glide:4.15.1'

    ksp 'com.github.bumptech.glide:ksp:4.15.1'

    debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.12'

    testImplementation 'org.mockito:mockito-core:5.4.0'
    testImplementation 'io.mockk:mockk:1.13.5'
    testImplementation "junit:junit:4.13.2"
    testImplementation 'org.jetbrains.kotlin:kotlin-test-junit:1.9.0'
    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.7.2'
    testImplementation "com.nhaarman.mockitokotlin2:mockito-kotlin:2.2.0"
    testImplementation 'org.assertj:assertj-core:3.24.2'

    androidTestImplementation 'androidx.test:rules:1.5.0'
    androidTestImplementation "junit:junit:4.13.2"
    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
}
